--- a/days1_/firstfile.html
+++ b/days1_/firstfile.html
@@ -45,7 +45,8 @@
     <br/>
     <p>
         Lorem ipsum dolor sit amet <strong>consectetur adipisicing elit. Assumenda unde sequi</strong> eos debitis odit deserunt placeat ut,
-         quia officia omnis temporibus perferendis consequatur delectus, voluptatum, culpa tenetur eius quae facere.
+         quia officia omnis <u><i><strong>temporibus perferendis consequatur delectus</strong></i></u>, voluptatum, culpa tenetur eius quae facere.
     </p>
+    
 </body>
 </html>
