--- a/days1_/secondsfile.html
+++ b/days1_/secondsfile.html
@@ -4,18 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+   <!--  burda title komutu ile sayfanın başlangic acılmış olur ismi -->
+    <title>SECONDFİLE</title>
 </head>
 <body>
+    <img src="../img/market.jpg" alt="market"width="100px" height="100px">
     <!-- div komutu ile o satır işgal edilir  -->
     <div>Kadir Tepecik</div>
     <div>Kader Tepecik</div>
     <div>Kadriye Tepecik</div>
 
     <p>Hello  World</p>
+    <!-- 
+        burdada a ile fotoraf ekelyip onu actırabiliriz
+     -->
+     <a href="../img/office.jpg"target="_blank">Fotograf ac</a>
+     <br />
+    <a target="_blank" href="../img/resim4.jpg">resim ac</a>
+    <br      />
     <!--  span komutu ile yanyanaa yazdırılabilir  -->
     <span>sayfalrın kullanımı ogreniyruz </span>
+    
     <span>sayfalrın kullanımı ogreniyoruz </span>
     <span>sayfalrın kullanımı ogreniyruz</span>
+
+    <br />
+    <!--  burda a komutu ile bir sayfadan dier sayfaya gecmeye başlar -->
+    <a href="firstfile.html">diger sayfa</a>
+
+    <br />
+    <!-- target="_blank" ile yeni sayfayı yeni pencerede acmış olduk  -->
+    <div><a href="https://www.facebook.com/"target="_blank">facebook</a></div>
+    <br />
+    <a href="https://www.google.com/">Google</a>
 </body>
 </html>
