--- a/days1_/formfile.html
+++ b/days1_/formfile.html
@@ -71,13 +71,20 @@
 <p><input type="button" value="KAYDET"></p>
 
 <!-- submit ile bilgiler otmatik olarak backand gönderilir saklanır
-value olmadan direk gönder kutucu cıkar ama value eklenerek ismi değiştiribiliriz -->
+value olmadan direk gönder kutucu cıkar ama value eklenerek ismi değiştiribiliriz
+kayır edileemz simdi cunku formda ctions dki dosya dogru değililerde saklanır -->
 <input type="submit"  value="gonder"/> 
 
 <!-- reset ie tum bilgiler temizlendi -->
 <input type="reset" value="temizle"/>
-
-
+<!-- reset ve submit dışardada olabilir ama form icindeki bilgileri kaydetmek icin 
+bu komutlar icerde kullanılınır -->
+<br />
+<input type="date" name="" id="">
+<!-- date ile tarih eklenebilir -->
+<br    />
+<input type="time" name="" id="">
+<!-- time ile saat eklenebilir  -->
 </form>    
 </body>
 </html>
