--- a/days1_/formfile.html
+++ b/days1_/formfile.html
@@ -67,6 +67,15 @@
     <label for="adres">ADRESS :</label>
     <textarea  id="adres" cols="20" rows="5"></textarea>
 </p>
+
+<br />
+<input type="date" name="" id="">
+<!-- date ile tarih eklenebilir -->
+<br    />
+<input type="time" name="" id="">
+<!-- time ile saat eklenebilir  -->
+
+
 <!-- button ile kayıt yapılır sayfada -->
 <p><input type="button" value="KAYDET"></p>
 
@@ -75,16 +84,25 @@ value olmadan direk gönder kutucu cıkar ama value eklenerek ismi değiştiribi
 kayır edileemz simdi cunku formda ctions dki dosya dogru değililerde saklanır -->
 <input type="submit"  value="gonder"/> 
 
-<!-- reset ie tum bilgiler temizlendi -->
-<input type="reset" value="temizle"/>
-<!-- reset ve submit dışardada olabilir ama form icindeki bilgileri kaydetmek icin 
-bu komutlar icerde kullanılınır -->
 <br />
-<input type="date" name="" id="">
-<!-- date ile tarih eklenebilir -->
-<br    />
-<input type="time" name="" id="">
-<!-- time ile saat eklenebilir  -->
+<p>
+    <!-- reset ie tum bilgiler temizlendi -->
+    <input type="reset" value="temizle"/>
+    <!-- reset ve submit dışardada olabilir ama form icindeki bilgileri kaydetmek icin 
+    bu komutlar icerde kullanılınır --></p>
+
+
+<img src="../img/animals/güvercin.jpg " alt="" weight="100px" height="100px" >
+
+<h1><i><u>tepecik</u></i></h1>
+<hr>
+
+<div>kadir
+</div>
+<span>jshkasfasöjasnfönasfhahsflas</span>
+<a href="https://www.amazon.com/"> amazon</a>
+<a href="../img/profile/profile4.jpg" target="_blank">foto </a>
+
 </form>    
 </body>
 </html>
