--- a/days1_/formfile.html
+++ b/days1_/formfile.html
@@ -101,7 +101,7 @@ kayır edileemz simdi cunku formda ctions dki dosya dogru değililerde saklanır
 </div>
 <span>jshkasfasöjasnfönasfhahsflas</span>
 <a href="https://www.amazon.com/"> amazon</a>
-<a href="../img/profile/profile4.jpg" target="_blank">foto </a>
+<a href="../img/profile/profile4.jpg" target="">foto </a>
 
 </form>    
 </body>
