--- a/siteCalısmam/anaSayfa.html
+++ b/siteCalısmam/anaSayfa.html
@@ -19,17 +19,54 @@
         </div>
 
         <div class="sayfalar">
-            <a href="urunler.html">Ürünler</a>
-            <a href="hakkımızda.html">Hakkımızda</a>
+            <a href="anasayfa.html">Anasayfa</a>
+            <a href="personeller.html">Personeller</a>
+            <a href="hakkimizda.html">Hakkımızda</a>
             <a href="oneriler.html">Öneriler</a>
+            <a href="giris.html">Giriş</a>
         </div>
 
     </header>
+    <hr />
+
+    <h1><u>SİTEMİZE HOSGELDİNİZ</u></h1>
+     <div>
+         <img src="../img/office.jpg" >
+         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores possimus reprehenderit, 
+             voluptas tempore, doloribus, necessitatibus vitae minus incidunt nam eligendi molestiae dicta numquam exercitationem quod obcaecati! 
+             Accusamus quidem qui excepturi?
+            </p>
+         <p>Eligendi ullam quis, incidunt similique quo voluptatem vitae odio beatae numquam
+              voluptatibus eius fugit ea officia ducimus minus recusandae itaque id optio quam ipsam laborum. 
+              Exercitationem animi fuga sunt cum?
+            </p>
+         <p>Consequatur deserunt aspernatur nobis dolores quae animi molestias 
+             enim ullam ab voluptatibus unde maxime ratione delectus facere eius quo nisi,
+              rem numquam. Dolorum possimus eum alias, vero necessitatibus quod corporis!
+            </p>
+            <img src="../img/clockoffice.jpg" alt="">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque nam nisi voluptatibus iure ipsum numquam.
+                 Similique harum dignissimos a distinctio ipsum aut nobis quasi porro, voluptates eos tempora, cumque accusantium.
+                </p>
+            <p>Debitis ducimus optio unde quis, eaque harum asperiores sunt modi voluptas velit saepe blanditiis tenetur ratione corrupti! 
+                A ducimus accusamus officiis? Sequi placeat molestiae consectetur officia. Delectus accusamus recusandae ab?
+            </p>
+            <p>Blanditiis cumque asperiores voluptate consequatur, dicta atque saepe,
+                 officiis qui assumenda dolorum error tempora cupiditate non. Obcaecati nesciunt hic, ut aut consequuntur laudantium harum 
+                 aspernatur similique, saepe delectus, dolorum sequi?
+                </p>
+     </div>
+
+
+     <hr>
     <footer>
-        <a target="_blank" href="https://wa.me/905464868431">Whatsapp</a>
+    <div>   
+         <a target="_blank" href="https://wa.me/905464868431">Whatsapp</a>
         <a target="_blank" href="http://tr-tr.facebook.com/">Facebook</a>
         <a target="_blank" href="https://twitter.com/?lang=tr">Twitter</a>
-
+        
+    </div>
+    <p> &copy; 2022 Powered by Kadir </p>
     </footer>
 </body>
 </html>
