--- a/siteCalısmam/hakkimizda.html
+++ b/siteCalısmam/hakkimizda.html
@@ -18,17 +18,42 @@
         </div>
 
         <div class="sayfalar">
-            <a href="urunler.html">Ürünler</a>
-            <a href="hakkımızda.html">Hakkımızda</a>
+            <a href="anasayfa.html">Anasayfa</a>
+            <a href="personeller.html">Personeller</a>
+            <a href="hakkimizda.html">Hakkımızda</a>
             <a href="oneriler.html">Öneriler</a>
         </div>
 
     </header>
-    <footer>
-        <a target="_blank" href="https://wa.me/905464868431">Whatsapp</a>
-        <a target="_blank" href="http://tr-tr.facebook.com/">Facebook</a>
-        <a target="_blank" href="https://twitter.com/?lang=tr">Twitter</a>
+    <hr>
+    <h1><u>HAKKIMIZDA SAYFASI</u></h1>
+     <div>
+         <ul>
+             <li>bilgi</li>
+             <li>bilgi</li>
+             <li>bilgi</li>
+             <li>bilgi</li>
+             <li>bilgi</li>
+             <li>bilgi</li>
+             <li>bilgi</li>
+             <li>bilgi</li>
+             <li>bilgi</li>
+             <li>bilgi</li>
+             <li>bilgi</li>
+         </ul>
+     </div>
 
-    </footer>
+
+
+    <hr>
+    <footer>
+        <div>   
+             <a target="_blank" href="https://wa.me/905464868431">Whatsapp</a>
+            <a target="_blank" href="http://tr-tr.facebook.com/">Facebook</a>
+            <a target="_blank" href="https://twitter.com/?lang=tr">Twitter</a>
+           
+        </div>
+        <p> &copy; 2022 Powered by Kadir </p>
+        </footer>
 </body>
 </html>
