--- a/siteCalısmam/oneriler.html
+++ b/siteCalısmam/oneriler.html
@@ -18,17 +18,57 @@
         </div>
 
         <div class="sayfalar">
-            <a href="urunler.html">Ürünler</a>
-            <a href="hakkımızda.html">Hakkımızda</a>
+            <a href="anasayfa.html">Anasayfa</a>
+            <a href="personeller.html">Personeller</a>
+            <a href="hakkimizda.html">Hakkımızda</a>
             <a href="oneriler.html">Öneriler</a>
         </div>
 
     </header>
+    <hr>
+    <h1><u>ÖNERİLER SAYFASI</u></h1>
+    <div>
+        <img src="../img/okul/picture3.jpg" alt="">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum error rem vitae 
+            laudantium omnis non eum voluptatum pariatur ratione?
+             Velit impedit quam magnam architecto repellat voluptas ipsum asperiores a facere.
+            </p>
+        <img src="../img/okul/picture4.jpg" alt="">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum error rem vitae 
+            laudantium omnis non eum voluptatum pariatur ratione?
+             Velit impedit quam magnam architecto repellat voluptas ipsum asperiores a facere.
+            </p>
+        <img src="../img/okul/picture5.jpg" alt="">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum error rem vitae 
+            laudantium omnis non eum voluptatum pariatur ratione?
+             Velit impedit quam magnam architecto repellat voluptas ipsum asperiores a facere.
+            </p>
+        <img src="../img/okul/picture6.jpg" alt="">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum error rem vitae 
+            laudantium omnis non eum voluptatum pariatur ratione?
+             Velit impedit quam magnam architecto repellat voluptas ipsum asperiores a facere.
+            </p>
+            <ol>
+                <li>here</li>
+                <li>here</li>
+                <li>here</li>
+                <li>here</li>
+                <li>here</li>
+                <li>here</li>
+                <li>here</li>
+                <li>here</li>
+                <li>here</li>
+            </ol>
+    </div>
+    <hr>
     <footer>
-        <a target="_blank" href="https://wa.me/905464868431">Whatsapp</a>
-        <a target="_blank" href="http://tr-tr.facebook.com/">Facebook</a>
-        <a target="_blank" href="https://twitter.com/?lang=tr">Twitter</a>
-
-    </footer>
+        <div>   
+             <a target="_blank" href="https://wa.me/905464868431">Whatsapp</a>
+            <a target="_blank" href="http://tr-tr.facebook.com/">Facebook</a>
+            <a target="_blank" href="https://twitter.com/?lang=tr">Twitter</a>
+          
+        </div>
+        <p> &copy; 2022 Powered by Kadir </p>
+        </footer>
 </body>
 </html>
