--- a/siteCalısmam/anaSayfa.html
+++ b/siteCalısmam/anaSayfa.html
@@ -5,17 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ANASAYFA</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+    />
 
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="anasayfa">
     <header>
         <div class="iletisim">
-            <a href="mailto:techproeducation.com">Eposta</a>
-            <a href="tel:+9055487556485">Telefon</a>
-            <a target="_blank" href="https://wa.me/905464868431">Whatsapp</a>
-            <a target="_blank" href="http://tr-tr.facebook.com/">Facebook</a>
-            <a target="_blank" href="https://twitter.com/?lang=tr">Twitter</a>
+            <a href="mailto:techproeducation.com"><i class="fa-solid fa-paper-plane"></i>Eposta</a>
+            <a href="tel:+9055487556485"><i class="fa-solid fa-phone"></i>Telefon</a>
+            <a target="_blank" href="https://wa.me/905464868431"><i class="fa-brands fa-whatsapp"></i>Whatsapp</a>
+            <a target="_blank" href="http://tr-tr.facebook.com/"><i class="fa-brands fa-facebook"></i>Facebook</a>
+            <a target="_blank" href="https://twitter.com/?lang=tr"><i class="fa-brands fa-twitter"></i>Twitter</a>
         </div>
 
         <div class="sayfalar">
@@ -23,7 +27,7 @@
             <a href="personeller.html">Personeller</a>
             <a href="hakkimizda.html">Hakkımızda</a>
             <a href="oneriler.html">Öneriler</a>
-            <a href="giris.html">Giriş</a>
+            <a href="giris.html">Giris</a>
         </div>
 
     </header>
