--- a/siteCalısmam/oneriler.html
+++ b/siteCalısmam/oneriler.html
@@ -5,16 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ONERİLER</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+    />
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="oneriler">
     <header>
         <div class="iletisim">
-            <a href="mailto:techproeducation.com">Eposta</a>
-            <a href="tel:+9055487556485">Telefon</a>
-            <a target="_blank" href="https://wa.me/905464868431">Whatsapp</a>
-            <a target="_blank" href="http://tr-tr.facebook.com/">Facebook</a>
-            <a target="_blank" href="https://twitter.com/?lang=tr">Twitter</a>
+            <a href="mailto:techproeducation.com"><i class="fa-solid fa-paper-plane"></i>Eposta</a>
+            <a href="tel:+9055487556485"><i class="fa-solid fa-phone"></i>Telefon</a>
+            <a target="_blank" href="https://wa.me/905464868431"><i class="fa-brands fa-whatsapp"></i>Whatsapp</a>
+            <a target="_blank" href="http://tr-tr.facebook.com/"><i class="fa-brands fa-facebook"></i>Facebook</a>
+            <a target="_blank" href="https://twitter.com/?lang=tr"><i class="fa-brands fa-twitter"></i>Twitter</a>
         </div>
 
         <div class="sayfalar">
@@ -22,6 +26,7 @@
             <a href="personeller.html">Personeller</a>
             <a href="hakkimizda.html">Hakkımızda</a>
             <a href="oneriler.html">Öneriler</a>
+            <a href="giris.html">Giris</a>
         </div>
 
     </header>
@@ -29,24 +34,24 @@
     <h1><u>ÖNERİLER SAYFASI</u></h1>
     <div>
         <img src="../img/okul/picture3.jpg" alt="">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum error rem vitae 
+        <p><span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum error rem vitae 
             laudantium omnis non eum voluptatum pariatur ratione?
-             Velit impedit quam magnam architecto repellat voluptas ipsum asperiores a facere.
+             Velit impedit quam magnam architecto repellat voluptas ipsum asperiores a facere.</span>
             </p>
         <img src="../img/okul/picture4.jpg" alt="">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum error rem vitae 
+        <p><span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum error rem vitae 
             laudantium omnis non eum voluptatum pariatur ratione?
-             Velit impedit quam magnam architecto repellat voluptas ipsum asperiores a facere.
+             Velit impedit quam magnam architecto repellat voluptas ipsum asperiores a facere.</span>
             </p>
         <img src="../img/okul/picture5.jpg" alt="">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum error rem vitae 
+        <p><span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum error rem vitae 
             laudantium omnis non eum voluptatum pariatur ratione?
-             Velit impedit quam magnam architecto repellat voluptas ipsum asperiores a facere.
+             Velit impedit quam magnam architecto repellat voluptas ipsum asperiores a facere.</span>
             </p>
         <img src="../img/okul/picture6.jpg" alt="">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum error rem vitae 
+        <p><span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum error rem vitae 
             laudantium omnis non eum voluptatum pariatur ratione?
-             Velit impedit quam magnam architecto repellat voluptas ipsum asperiores a facere.
+             Velit impedit quam magnam architecto repellat voluptas ipsum asperiores a facere.</span>
             </p>
             <ol>
                 <li>here</li>
